force-app/main/default/objects/Case_Round_Robin_Queue_Member__c/Case_Round_Robin_Queue_Member__c.object-meta.xml
<CustomObject>
    <label>Case Round Robin Queue Member</label>
    <nameField>
        <label>Case Round Robin Queue Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Round Robin Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>