force-app/main/default/objects/Case_Round_Robin_Queue_Member__c/fields/Case_Round_Robin_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Round_Robin_Queue__c</fullName>
    <label>Case Round Robin Queue</label>
    <referenceTo>Case_Round_Robin_Queue__c</referenceTo>
    <relationshipLabel>Case Round Robin Queue Members</relationshipLabel>
    <relationshipName>Case_Round_Robin_Queue_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>