force-app/main/default/objects/Case_Round_Robin_Queue_Member__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>