force-app/main/default/objects/Case_Round_Robin_Queue_Member__c/fields/RR_Paused__c.field-meta.xml
<CustomField>
    <fullName>RR_Paused__c</fullName>
    <formula>if ( Member__r.Pause_Round_Robin__c , &quot;Paused&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Paused</label>
    <type>Text</type>
</CustomField>